<resources>
    <string name="app_name">Plana22</string>
    <string name="app_real_name">Plana22</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="singular_task">Task</string>
    <string name="plural_tasks">Tasks</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="image_contentDescription">image</string>

    <!--
    <Strings  for the Intro activity
-->
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Plana22’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>

    <!--
Strings for the sign up & sign in Activities
-->
    <string name="sign_up_description_text">Enter your name, email id and password, to create an account.</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email id and password, to log into your account.</string>

    <!--
        Strings or progress dialog
    -->
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="logout_question_text">Are you sure you want to log out your account?</string>

    <!--String for the nav drawer list-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <!--String for the nav drawer list-->
    <string name="my_profile_title">My Profile</string>
    <string name="home">Home</string>
    <string name="habits">Habits</string>
    <string name="Projects">Projects</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>

    <string name="create_board_title">Create Board</string>

    <!--Strings for the board activity-->
    <string name="boards_list">Boards List</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_are_available">No Boards are available!!!</string>
    <string name="action_add_list">Add List</string>


    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>


    <!--String for the Members activity-->
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <!--String for the Card details activity-->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>

    <string-array name="Category">
        <item>Today</item>
        <item>Planned</item>
        <item>Personal</item>
        <item>Work</item>
        <item>Shopping</item>
    </string-array>

</resources>