<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_baseline_check"
            android:title="@string/Projects"
            />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/my_profile"
            />


        <item  android:title="@string/settings"
            android:checkable="true">

            <menu>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings"
                    android:title="@string/settings"
                    />

                <item
                    android:id="@+id/nav_signOut"
                    android:icon="@drawable/ic_signout"
                    android:title="@string/sign_out"
                    />

            </menu>

        </item>

        <item  android:title="Communicate"
            android:checkable="true">
            <menu>

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_share"
                    android:title="Share"
                    />

                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_baseline_rate_review"
                    android:title="Rate us"
                    />

            </menu>

        </item>

    </group>

</menu>